--- a/app/src/main/res/layout/fragment_room_devices_screen.xml
+++ b/app/src/main/res/layout/fragment_room_devices_screen.xml
@@ -23,6 +23,18 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        android:id="@+id/currentTemperature"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/dosis_regular"
+        android:text="@string/temperature"
+        android:textSize="30sp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
         android:id="@+id/roomNameDevicesTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -34,17 +46,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/arrowImage" />
 
-    <TextView
-        android:id="@+id/currentTemperature"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/dosis_regular"
-        android:text="@string/temperature"
-        android:textSize="30sp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/editImage"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:src="@drawable/ic_edit"
+        android:layout_marginStart="10dp"
+        app:layout_constraintBottom_toBottomOf="@+id/roomNameDevicesTV"
+        app:layout_constraintStart_toEndOf="@+id/roomNameDevicesTV"
+        app:layout_constraintTop_toTopOf="@+id/roomNameDevicesTV" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/room_devices"
