--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
   <color name="primaryTextColor">#000000</color>
   <color name="secondaryTextColor">#000000</color>
   <color name="orange">#FF7404</color>
+  <color name="white">#FFFFFF</color>
+
 </resources>
