--- a/app/src/main/res/navigation/nav_graph_menu.xml
+++ b/app/src/main/res/navigation/nav_graph_menu.xml
@@ -87,6 +87,11 @@
         <action
             android:id="@+id/action_ledLightSettingsFragment_to_roomDevicesScreenFragment"
             app:destination="@id/roomDevicesScreenFragment" />
+        <argument
+            android:name="roomNameString"
+            app:argType="string[]"
+            app:nullable="true"
+            android:defaultValue="@null" />
     </fragment>
     <fragment
         android:id="@+id/climateSettingsFragment"
