--- a/app/src/main/res/layout/fragment_profile_menu.xml
+++ b/app/src/main/res/layout/fragment_profile_menu.xml
@@ -15,6 +15,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ImageView
+        android:id="@+id/logOutImage"
+        android:layout_width="95dp"
+        android:layout_height="75dp"
+        android:src="@drawable/ic_logout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/horizontalGuideline"
@@ -32,7 +39,7 @@
 
 
     <EditText
-        android:id="@+id/firstNameProfileInput"
+        android:id="@+id/fullNameProfileInput"
         android:layout_width="wrap_content"
         android:layout_height="40dp"
         android:background="@drawable/custom_input_field"
@@ -40,30 +47,16 @@
         android:fontFamily="@font/dosis_medium"
         android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/firstNameProfileTV"
+        app:layout_constraintTop_toBottomOf="@+id/fullNameTV"
         tools:ignore="TextFields" />
 
     <TextView
-        android:id="@+id/lastNameProfileTV"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="25dp"
-        android:fontFamily="@font/dosis_regular"
-        android:text="@string/last_name"
-        android:textSize="15sp"
-        app:layout_constraintEnd_toStartOf="@+id/verticalGuidelineLoginPage"
-        app:layout_constraintHorizontal_bias="0.535"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/firstNameProfileInput" />
-
-    <TextView
-        android:id="@+id/firstNameProfileTV"
+        android:id="@+id/fullNameTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/dosis_regular"
-        android:text="@string/first_name"
+        android:text="@string/full_name"
         android:textSize="15sp"
         android:layout_marginStart="25dp"
         app:layout_constraintEnd_toStartOf="@+id/verticalGuidelineLoginPage"
@@ -78,25 +71,8 @@
         android:fontFamily="@font/dosis_regular"
         android:text="@string/phone_number"
         android:textSize="15sp"
-        app:layout_constraintEnd_toStartOf="@+id/verticalGuidelineLoginPage"
-        app:layout_constraintHorizontal_bias="0.027"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lastNameProfileInput" />
-
-    <EditText
-        android:id="@+id/lastNameProfileInput"
-        android:layout_width="wrap_content"
-        android:layout_height="40dp"
-        android:layout_marginTop="4dp"
-        android:background="@drawable/custom_input_field"
-        android:ems="16"
-        android:fontFamily="@font/dosis_medium"
-        android:inputType="text"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.49"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lastNameProfileTV"
-        tools:ignore="TextFields" />
+        app:layout_constraintTop_toBottomOf="@+id/emailProfileInput" />
 
     <EditText
         android:id="@+id/phoneNumberInput"
@@ -108,7 +84,6 @@
         android:fontFamily="@font/dosis_medium"
         android:inputType="phone"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/phoneNumberTV"
         tools:ignore="TextFields" />
@@ -118,10 +93,10 @@
         android:layout_width="250dp"
         android:layout_height="60dp"
         android:background="@drawable/custom_register_button"
+        android:fontFamily="@font/dosis_medium"
         android:text="@string/save_changes"
         android:textColor="#FFFFFF"
         android:textSize="25sp"
-        android:fontFamily="@font/dosis_medium"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -145,7 +120,7 @@
         android:textSize="15sp"
         app:layout_constraintEnd_toStartOf="@+id/verticalGuidelineLoginPage"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/phoneNumberInput" />
+        app:layout_constraintTop_toBottomOf="@+id/fullNameProfileInput" />
 
     <EditText
         android:id="@+id/emailProfileInput"
@@ -161,27 +136,63 @@
         tools:ignore="TextFields" />
 
     <TextView
-        android:id="@+id/allowNotifications"
+        android:id="@+id/changePasswordTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/dosis_regular"
-        android:text="@string/notifications_allow"
+        android:text="@string/new_password"
         android:textSize="15sp"
+        android:layout_marginStart="28dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/phoneNumberInput" />
+
+    <TextView
+        android:id="@+id/allowNotifications"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="25dp"
         android:layout_marginTop="20dp"
+        android:fontFamily="@font/dosis_regular"
+        android:text="@string/notifications_allow"
+        android:textSize="15sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/emailProfileInput" />
+        app:layout_constraintTop_toBottomOf="@+id/changePasswordInput" />
 
     <Switch
         android:id="@+id/switchNotifications"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="18dp"
         android:background="@drawable/custom_switch"
         android:hapticFeedbackEnabled="true"
         app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="18dp"
         app:layout_constraintStart_toEndOf="@+id/allowNotifications"
-        app:layout_constraintTop_toBottomOf="@+id/emailProfileInput"
+        app:layout_constraintTop_toBottomOf="@+id/changePasswordInput"
         tools:ignore="UseSwitchCompatOrMaterialXml" />
 
+    <EditText
+        android:id="@+id/changePasswordInput"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:layout_marginTop="4dp"
+        android:background="@drawable/custom_input_field"
+        android:ems="16"
+        android:fontFamily="@font/dosis_medium"
+        android:inputType="textPassword"
+        app:layout_constraintTop_toBottomOf="@+id/changePasswordTV"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:ignore="TextFields" />
+
+
+    <!--
+    <ImageView
+        android:id="@+id/passwordToggleVisibility"
+        android:layout_width="50dp"
+        android:layout_height="30dp"
+        android:src="@drawable/ic_visibility"
+        app:layout_constraintBottom_toBottomOf="@+id/changePasswordInput"
+        app:layout_constraintEnd_toEndOf="@+id/changePasswordInput"
+        app:layout_constraintTop_toTopOf="@+id/changePasswordInput" />
+    -->
 </androidx.constraintlayout.widget.ConstraintLayout>
