--- a/app/src/main/res/layout/fragment_create_new_account.xml
+++ b/app/src/main/res/layout/fragment_create_new_account.xml
@@ -117,6 +117,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/passwordRegisterTV" />
 
+    <ImageView
+        android:id="@+id/passwordCreateAccountToggleVisibility"
+        android:layout_width="50dp"
+        android:layout_height="30dp"
+        android:src="@drawable/ic_visibility"
+        app:layout_constraintBottom_toBottomOf="@+id/passwordRegisterInput"
+        app:layout_constraintEnd_toEndOf="@+id/passwordRegisterInput"
+        app:layout_constraintTop_toTopOf="@+id/passwordRegisterInput" />
+
     <TextView
         android:id="@+id/phoneNumberRegisterTV"
         android:layout_width="wrap_content"
