--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -107,6 +107,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/passwordTV" />
 
+    <ImageView
+        android:id="@+id/passwordLoginToggleVisibility"
+        android:layout_width="50dp"
+        android:layout_height="30dp"
+        android:src="@drawable/ic_visibility"
+        app:layout_constraintBottom_toBottomOf="@+id/passwordInput"
+        app:layout_constraintEnd_toEndOf="@+id/passwordInput"
+        app:layout_constraintTop_toTopOf="@+id/passwordInput" />
+
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/verticalGuidelineLoginPage"
         android:layout_width="wrap_content"
