--- a/app/src/main/res/layout/fragment_create_new_preset.xml
+++ b/app/src/main/res/layout/fragment_create_new_preset.xml
@@ -58,7 +58,7 @@
         app:layout_constraintTop_toBottomOf="@+id/presetNameTV" />
 
     <TextView
-        android:id="@+id/roomNameTV"
+        android:id="@+id/homeNameTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/dosis_regular"
@@ -95,7 +95,7 @@
         android:background="@drawable/custom_input_field"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/roomNameTV" />
+        app:layout_constraintTop_toBottomOf="@+id/homeNameTV" />
 
     <TextView
         android:id="@+id/datePickerTV"
