--- a/app/src/main/res/layout/fragment_home_menu.xml
+++ b/app/src/main/res/layout/fragment_home_menu.xml
@@ -50,7 +50,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/dosis_regular"
-        android:text="@string/current_home_smeklak"
+        android:text="@string/current_home"
         android:textSize="22sp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="10dp"
