--- a/app/src/main/res/navigation/nav_graph_menu.xml
+++ b/app/src/main/res/navigation/nav_graph_menu.xml
@@ -85,6 +85,11 @@
         <action
             android:id="@+id/action_addNewDeviceFragment_to_roomDevicesScreenFragment"
             app:destination="@id/roomDevicesScreenFragment" />
+        <argument
+            android:name="roomNameString"
+            app:argType="string"
+            app:nullable="true"
+            android:defaultValue="null" />
     </fragment>
     <fragment
         android:id="@+id/ledLightSettingsFragment"
@@ -95,9 +100,14 @@
             app:destination="@id/roomDevicesScreenFragment" />
         <argument
             android:name="roomNameString"
-            app:argType="string[]"
+            app:argType="string"
             app:nullable="true"
-            android:defaultValue="@null" />
+            android:defaultValue="null" />
+        <argument
+            android:name="deviceNameString"
+            app:argType="string"
+            app:nullable="true"
+            android:defaultValue="null" />
     </fragment>
     <fragment
         android:id="@+id/climateSettingsFragment"
@@ -106,6 +116,16 @@
         <action
             android:id="@+id/action_climateSettingsFragment_to_roomDevicesScreenFragment"
             app:destination="@id/roomDevicesScreenFragment" />
+        <argument
+            android:name="roomNameString"
+            app:argType="string"
+            app:nullable="true"
+            android:defaultValue="null" />
+        <argument
+            android:name="deviceNameString"
+            app:argType="string"
+            app:nullable="true"
+            android:defaultValue="null" />
     </fragment>
     <fragment
         android:id="@+id/createHomeFragment"
