--- a/app/src/main/res/layout/change_name_dialog.xml
+++ b/app/src/main/res/layout/change_name_dialog.xml
@@ -15,27 +15,16 @@
         android:gravity="center"
         android:textColor="@color/black"
         android:textSize="45sp"
+        android:text="@string/change_name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="Change name" />
-
-    <TextView
-        android:id="@+id/newNameTV"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/dosis_regular"
-        android:text="@string/new_name"
-        android:textSize="15sp"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="10dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/changeNameTitle" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/changeNameInput"
         android:layout_width="wrap_content"
         android:layout_height="40dp"
+        android:layout_marginTop="20dp"
         android:background="@drawable/custom_input_field"
         android:ems="16"
         android:fontFamily="@font/dosis_medium"
@@ -43,8 +32,8 @@
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/newNameTV"
-        tools:ignore="TextViewEdits" />
+        app:layout_constraintTop_toBottomOf="@+id/changeNameTitle"
+        android:importantForAutofill="no" />
 
     <LinearLayout
         android:layout_width="match_parent"
