--- a/app/src/main/res/layout/custom_tab_image.xml
+++ b/app/src/main/res/layout/custom_tab_image.xml
@@ -5,6 +5,6 @@
     android:layout_height="match_parent">
     <ImageView
         android:id="@+id/imageView"
-        android:layout_height="20dp"
-        android:layout_width="20dp" />
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content" />
 </LinearLayout>
