--- a/app/src/main/res/layout/fragment_create_new_preset.xml
+++ b/app/src/main/res/layout/fragment_create_new_preset.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoginActivity">
+    tools:context=".MainMenuActivity">
 
 
 
@@ -34,7 +34,7 @@
         android:id="@+id/buttonSavePreset"
         android:layout_width="250dp"
         android:layout_height="60dp"
-        android:layout_marginBottom="28dp"
+        android:layout_marginBottom="30dp"
         android:background="@drawable/custom_register_button"
         android:fontFamily="@font/dosis_medium"
         android:text="@string/save_preset"
@@ -42,7 +42,6 @@
         android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.521"
         app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
