--- a/app/src/main/res/layout/fragment_add_new_device.xml
+++ b/app/src/main/res/layout/fragment_add_new_device.xml
@@ -48,6 +48,7 @@
         android:ems="16"
         android:fontFamily="@font/dosis_medium"
         android:inputType="text"
+        android:maxLength="10"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/newDeviceNameTV"
