--- a/app/src/main/res/layout/fragment_home_menu.xml
+++ b/app/src/main/res/layout/fragment_home_menu.xml
@@ -71,13 +71,11 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rooms"
         android:layout_width="match_parent"
-        android:layout_height="565dp"
+        android:layout_height="580dp"
         app:layoutManager="LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/welcomeTV" />
-
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout >
 
