--- a/app/src/main/res/layout/fragment_create_new_account.xml
+++ b/app/src/main/res/layout/fragment_create_new_account.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".authenticationFragments.CreateNewaccountFragment">
+    tools:context=".authentificationPage.fragment.CreateNewAccountFragment">
 
     <ImageView
         android:id="@+id/arrowImage"
