--- a/app/src/main/res/layout/fragment_home_menu.xml
+++ b/app/src/main/res/layout/fragment_home_menu.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".homeFragments.HomeMenuFragment">
+    tools:context=".roomsPage.fragment.HomeMenuFragment">
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/verticalGuidelineLoginPage"
@@ -75,7 +75,8 @@
         app:layoutManager="LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/currentHome" />
 
 </androidx.constraintlayout.widget.ConstraintLayout >
 
