--- a/app/src/main/res/layout/fragment_swipe_menu.xml
+++ b/app/src/main/res/layout/fragment_swipe_menu.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".homeFragments.SwipeMenuFragment"
+    tools:context=".roomsPage.SwipeMenuFragment"
     android:orientation="vertical">
 
     <androidx.viewpager2.widget.ViewPager2
