--- a/app/src/main/res/navigation/nav_graph_login.xml
+++ b/app/src/main/res/navigation/nav_graph_login.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/loginFragment"
-        android:name="hu.bme.aut.android.smarthome.authenticationFragments.LoginFragment"
+        android:name="hu.bme.aut.android.smarthome.authentificationPage.fragment.LoginFragment"
         android:label="fragment_login"
         tools:layout="@layout/fragment_login" >
         <action
@@ -19,7 +19,7 @@
     </fragment>
     <fragment
         android:id="@+id/createNewaccountFragment"
-        android:name="hu.bme.aut.android.smarthome.authenticationFragments.CreateNewaccountFragment"
+        android:name="hu.bme.aut.android.smarthome.authentificationPage.fragment.CreateNewAccountFragment"
         android:label="fragment_create_newaccount"
         tools:layout="@layout/fragment_create_new_account" >
         <action
@@ -28,7 +28,7 @@
     </fragment>
     <fragment
         android:id="@+id/forgotPasswordFragment"
-        android:name="hu.bme.aut.android.smarthome.authenticationFragments.ForgotPasswordFragment"
+        android:name="hu.bme.aut.android.smarthome.authentificationPage.fragment.ForgotPasswordFragment"
         android:label="fragment_forgot_password"
         tools:layout="@layout/fragment_forgot_password" >
         <action
@@ -40,7 +40,7 @@
     </fragment>
     <fragment
         android:id="@+id/resetPasswordFragment"
-        android:name="hu.bme.aut.android.smarthome.authenticationFragments.ResetPasswordFragment"
+        android:name="hu.bme.aut.android.smarthome.authentificationPage.fragment.ResetPasswordFragment"
         android:label="fragment_reset_password"
         tools:layout="@layout/fragment_reset_password" >
         <action
