--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -6,36 +6,12 @@
     android:layout_height="match_parent"
     tools:context=".authentificationPage.activity.LoginActivity">
 
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/loginButton"
-        android:layout_width="250dp"
-        android:layout_height="60dp"
-        android:background="@drawable/custom_login_button"
-        android:fontFamily="@font/dosis_medium"
-        android:text="@string/login"
-        android:textColor="#FFFFFF"
-        android:textSize="25sp"
-        android:layout_marginBottom="15dp"
-        app:layout_constraintBottom_toTopOf="@+id/registerButton"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.503"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/registerButton"
-        android:layout_width="250dp"
-        android:layout_height="60dp"
-        android:layout_marginBottom="120dp"
-        android:background="@drawable/custom_register_button"
-        android:fontFamily="@font/dosis_medium"
-        android:text="@string/register"
-        android:textColor="#FFFFFF"
-        android:textSize="25sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.503"
-        app:layout_constraintStart_toStartOf="parent" />
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/verticalGuidelineLoginPage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="87dp" />
 
     <TextView
         android:id="@+id/smartHomeTV"
@@ -57,7 +33,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/smartHomeTV" />
+        app:layout_constraintTop_toBottomOf="@+id/smartHomeTV"
+        tools:ignore="ContentDescription" />
 
     <TextView
         android:id="@+id/emailTV"
@@ -116,12 +93,35 @@
         app:layout_constraintEnd_toEndOf="@+id/passwordInput"
         app:layout_constraintTop_toTopOf="@+id/passwordInput" />
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/verticalGuidelineLoginPage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_begin="87dp" />
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/loginButton"
+        android:layout_width="250dp"
+        android:layout_height="60dp"
+        android:background="@drawable/custom_login_button"
+        android:fontFamily="@font/dosis_medium"
+        android:text="@string/login"
+        android:textColor="#FFFFFF"
+        android:textSize="25sp"
+        android:layout_marginBottom="15dp"
+        app:layout_constraintBottom_toTopOf="@+id/registerButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.503"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/registerButton"
+        android:layout_width="250dp"
+        android:layout_height="60dp"
+        android:layout_marginBottom="120dp"
+        android:background="@drawable/custom_register_button"
+        android:fontFamily="@font/dosis_medium"
+        android:text="@string/register"
+        android:textColor="#FFFFFF"
+        android:textSize="25sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.503"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/staySignedInTV"
