--- a/app/src/main/res/layout/fragment_led_light_settings.xml
+++ b/app/src/main/res/layout/fragment_led_light_settings.xml
@@ -18,13 +18,35 @@
         android:id="@+id/lightSettingsTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
         android:fontFamily="@font/dosis_bold"
         android:text="@string/led_light_settings"
         android:textColor="#000000"
         android:textSize="40sp"
-        android:layout_marginStart="16dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/arrowImage" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/buttonTurnOnOffDevice"
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:background="@drawable/custom_login_button"
+        android:fontFamily="@font/dosis_medium"
+        android:text="@string/state_on"
+        android:textColor="#FFFFFF"
+        android:textSize="25sp"
+        app:layout_constraintBottom_toTopOf="@+id/colorPicker"
+        app:layout_constraintStart_toStartOf="@+id/colorPicker"
+        app:layout_constraintTop_toBottomOf="@+id/lightSettingsTV" />
+
+    <ImageView
+        android:id="@+id/lightStateImage"
+        android:layout_width="30dp"
+        android:layout_height="0dp"
+        android:src="@drawable/ic_lightbulb_off_orange"
+        app:layout_constraintBottom_toTopOf="@+id/colorPicker"
+        app:layout_constraintStart_toEndOf="@+id/buttonTurnOnOffDevice"
+        app:layout_constraintTop_toBottomOf="@+id/lightSettingsTV" />
 
     <com.panshen.gridcolorpicker.GridColorPicker
         android:id="@+id/colorPicker"
